--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,6 +4,8 @@ module(
     version = "1.0",
 )
 
+http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
+
 ###################################################################
 module_dot_bazel_file = """
 module(
@@ -21,10 +23,9 @@ filegroup(
 ###################################################################
 
 bazel_dep(name = "rules_foreign_cc", version = "0.13.0")
-bazel_dep(name = "mysql-connector-cpp", version = "")
 
-archive_override(
-    module_name = "mysql-connector-cpp",
+http_archive(
+    name = "mysql-connector-cpp",
     integrity = "sha256-ZMf1xxjhTqcIOXfhlStU8iFsb6ajVAhN4+PWf4xbGNA=",
     strip_prefix = "mysql-connector-cpp-9.1.0",
     urls = [
